@@ -30,5 +30,6 @@
  - Added CORS to Web API.
  - Added spam protection to the twitter widget (contrib).
  - Added image and download options to the set command.
+ - Added the "minutes" property to playlists.
  - Removed old commands: hotline, icelog, listeners, mail (CLI).
  - Changed tags order in tags/show: subtags go last.
